Mon May 23 20:20:12 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (isfinite): get rid of a warning on
	  cygwin. [Bug #12417][ruby-core:75691]

Mon May 23 19:41:27 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_rand.c (ossl_rand_egd, ossl_rand_egd_bytes):
	  RAND_egd{_bytes,}() return -1 on failure, not 0.
	  Patch by cremno phobia <cremno@mail.ru>
	  [ruby-core:63795] [Bug #10053]
	  (ossl_pseudo_bytes): Similar, RAND_pseudo_bytes() may return 0 or
	  -1 on failure.

Mon May 23 15:52:07 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (isfinite): isfinite does not always
	  exist.  fixed build error on Windows introduced at r55123.

Mon May 23 13:19:41 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args0): make compile error if the
	  format is wrong or does not match with the variable argument
	  length if possible.

Mon May 23 12:47:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args0): raise fatal error if
	  variable argument length does not match, it is a bug in the code
	  which uses rb_scan_args, not a runtime error.

Mon May 23 12:30:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (GetVpValueWithPrec): consider
	  non-finite float values not to raise FloatDomainError.
	  [ruby-core:75682] [Bug #12414]

Mon May 23 12:21:18 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* array.c (rb_ary_fill): suppress warnings: 'item' may be used
	  uninitialized in this function

Mon May 23 07:41:49 2016  Eric Wong  <e@80x24.org>

	* dir.c (dir_close): update RDoc for 2.3 #close change
	  [ruby-core:75679] [Bug #12413]

Sun May 22 20:01:21 2016  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/timeridconv.rb: use finalizer trick instead of thread.

	* test/drb/ut_timerholder.rb: ditto.

Sun May 22 17:25:18 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
