@@ -1,3 +1,15 @@
+Mon May 23 20:32:16 2016  Kazuki Yamaguchi  <k@rhe.jp>
+
+	* ext/openssl/ossl_asn1.c, ext/openssl/ossl_bn.c,
+	  ext/openssl/ossl_cipher.c, ext/openssl/ossl_digest.c
+	  ext/openssl/ossl_engine.c, ext/openssl/ossl_ns_spki.c
+	  ext/openssl/ossl_pkcs12.c, ext/openssl/ossl_pkcs7.c
+	  ext/openssl/ossl_pkey.c, ext/openssl/ossl_pkey_ec.c
+	  ext/openssl/ossl_rand.c, ext/openssl/ossl_ssl.c
+	  ext/openssl/ossl_x509attr.c, ext/openssl/ossl_x509cert.c
+	  ext/openssl/ossl_x509ext.c, ext/openssl/ossl_x509store.c: Use
+	  StringValueCStr() where NUL-terminated string is expected.
+
 Mon May 23 20:20:12 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ext/bigdecimal/bigdecimal.c (isfinite): get rid of a warning on
